--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/homestyles.css" />
+    <link rel="stylesheet" href="./css/projectsstyles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +20,7 @@
             <a href="#"><img src="./img/logo.png" alt="Logo" /></a>
             <ul class="navItems">
                 <li><a href="#" class="active-nav">HOME</a></li>
-                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">OUTREACH</a></li>
                 <li><a href="#">SPONSORS</a></li>
                 <li><a href="#">TEAM</a></li>
@@ -42,40 +42,8 @@
             </div>
         </header>
     </div>
-    <div id="hero">
-        <h1><img src="./img/hero-text.png" alt="" /></h1>
-        <h2><img src="./img/hero-text2.png" alt="" /></h2>
-        <p class="">
-            We are a group of passionate highschoolers aimed at creating
-            rockets and pursuing missions in aerospace engineering. We
-            emphasie core engineering skills and adaptive problem solving.
-        </p>
-        <a href="#about-us" class="btn btn-red">LEARN MORE</a>
-    </div>
-    <section id="about-us">
-        <div id="about">
-            <div class="left">
-                <h3>ABOUT US</h3>
-                <h2>We launch competition and experimental rockets.</h2>
-                <p>
-                    Louisville Rocketry is a student-led engineering team at
-                    duPont Manual High School. Founded in 2017, we are
-                    passionate about designing, testing, building, and
-                    launching rockets. With multiple successful seasons and
-                    experienced team members, our rocketry team is always
-                    looking to take the next step forward.
-                </p>
-            </div>
-            <div class="right">
-                <img src="./img/left-border.png" class="left-border" alt="" />
-                <img src="./img/right-border.png" class="right-border" alt="" />
-                <iframe width="560" height="412" src="https://www.youtube.com/embed/A2ZZnCD8i9M"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen class="video"></iframe>
-            </div>
-        </div>
-    </section>
+
+    <!-- CONTENT HERE -->
 
     <div id="footer">
         <div class="footer-nav">
