--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <!--Hover.css CDN-->
+
+
         <title>Louisville Rocketry | Home</title>
     </head>
     <body>
@@ -27,7 +30,7 @@
                     <li><a href="#">SPONSORS</a></li>
                     <li><a href="#">TEAM</a></li>
                     <li><a href="#">CONTACT</a></li>
-                    <li><a href="#" class="border-red">JOIN</a></li>
+                    <li><a href="#" class="border-red   hvr-grow hvr-bounce-to-left">JOIN</a></li>
                 </ul>
                 <i
                     class="fa-solid fa-bars fa-lg"
