--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
             </div>
             <a href="#" class="btn btn-gray">JOIN</a>
         </div>
-        <div class="shoutout">Website Designed by <a
-                style="color: rgb(111, 111, 111); text-decoration: underline;"
-                href="https://nathananil145.github.io">Nathan</a></div>
+        <div class="shoutout">Website Designed by <a style="color: rgb(111, 111, 111); text-decoration: underline;"
+                href="https://nathan-anil.github.io/">Nathan</a></div>
         <p>© 2022 Louisville Rocketry</p>
 
     </div>
