home screen details

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="#">SPONSORS</a></li>
                 <li><a href="#">TEAM</a></li>
                 <li><a href="#">CONTACT</a></li>
-                <li><a href="#" class="border-red">JOIN</a></li>
+                <li><a href="#" class="border-red hvr-grow">JOIN</a></li>
             </ul>
             <i class="fa-solid fa-bars fa-lg" style="color: white; height: 30px; width: 30px" id="hamburger"></i>
             <div id="mobile-nav">
@@ -69,7 +69,7 @@
             rockets and pursuing missions in aerospace engineering. We
             emphasie core engineering skills and adaptive problem solving.
         </p>
-        <a href="#about-us" class="btn btn-red">LEARN MORE</a>
+        <a href="#about-us" class="btn btn-red hvr-wobble-horizontal">LEARN MORE</a>
     </div>
     <section id="about-us">
         <div id="about">
@@ -97,10 +97,12 @@
     </section>
 
     <div id="footer">
+        
         <div class="footer-nav">
             <div class="social-icons">
                 <i class="fa-brands fa-instagram fa-xl"></i><i class="fa-brands fa-facebook fa-xl"></i>
             </div>
+            
             <div class="navbar">
                 <ul>
                     <li><a href="#">HOME</a></li>
@@ -113,8 +115,6 @@
             </div>
             <a href="#" class="btn btn-gray">JOIN</a>
         </div>
-        <div class="shoutout">Website Designed by <a style="color: rgb(111, 111, 111); text-decoration: underline;"
-                href="https://nathan-anil.github.io/">Nathan</a></div>
         <p>© 2022 Louisville Rocketry</p>
 
     </div>
