--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <!--Hover.css CDN-->
 
+        <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script> <!--Typing animations CDN-->
 
         <title>Louisville Rocketry | Home</title>
     </head>
     <body>
-        <img src="./img/hero-left.png" class="hero-left" alt="" />
 
 <head>
     <meta charset="UTF-8" />
@@ -39,7 +39,7 @@
             <a href="#"><img src="./img/logo.png" alt="Logo" /></a>
             <ul class="navItems">
                 <li><a href="#" class="active-nav">HOME</a></li>
-                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">OUTREACH</a></li>
                 <li><a href="#">SPONSORS</a></li>
                 <li><a href="#">TEAM</a></li>
@@ -65,9 +65,9 @@
         <h1><img src="./img/hero-text.png" alt="" /></h1>
         <h2><img src="./img/hero-text2.png" alt="" /></h2>
         <p class="">
-            We are a group of passionate highschoolers aimed at creating
+            We are a group of highschoolers passionate about creating
             rockets and pursuing missions in aerospace engineering. We
-            emphasie core engineering skills and adaptive problem solving.
+            emphasize core engineering skills and adaptive problem solving.
         </p>
         <a href="#about-us" class="btn btn-red hvr-wobble-horizontal">LEARN MORE</a>
     </div>
@@ -76,7 +76,8 @@
         <div id="about">
             <div class="left">
                 <h3>ABOUT US</h3>
-                <h2>We launch competition and experimental rockets.</h2>
+                <h2>We launch <span id = "competetivelabel"></span> and experimental rockets.</h2>
+                <script src="competetiveanimation.js"></script>
                 <p>
                     Louisville Rocketry is a student-led engineering team at
                     duPont Manual High School. Founded in 2017, we are
