adding details to home screen

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <title>Home - LoiusVilleRocketry</title>
+
+
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--Hover.css CDN-->
+
+
+        <title>Louisville Rocketry | Home</title>
     </head>
     <body>
-        <img src="./img/hero-left.png" class="hero-left" alt="" />
         <div id="mobile-nav">
             <i class="fa-solid fa-xmark fa-xl" id="cross"></i>
             <ul>
@@ -31,7 +36,9 @@
 
         <div id="header">
             <header>
-                <a href="#"><img src="./img/logo.png" alt="Logo" /></a>
+                <a href="index.html">
+                    <img src="./img/logo.png" alt="LOGO" class="hvr-pulse-grow"/>
+                </a>
                 <ul class="navItems">
                     <li><a href="index.html" class="active-nav">HOME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
@@ -39,7 +46,7 @@
                     <li><a href="#">SPONSORS</a></li>
                     <li><a href="#">TEAM</a></li>
                     <li><a href="#">CONTACT</a></li>
-                    <li><a href="#" class="border-red">JOIN</a></li>
+                    <li><a href="#" class="border-red hvr-bounce-to-left">JOIN</a></li>
                 </ul>
                 <i
                     class="fa-solid fa-bars fa-lg"
@@ -56,7 +63,7 @@
                 rockets and pursuing missions in aerospace engineering. We
                 emphasie core engineering skills and adaptive problem solving.
             </p>
-            <a href="#" class="btn btn-red">LEARN MORE</a>
+            <a href="#" class="btn btn-red  hvr-bounce-in">LEARN MORE</a>
         </div>
         <section id="about-us">
             <div id="about">
