working on home screen animations and details

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--Hover.css CDN-->
 
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!--animate.style-->
+
         <title>Louisville Rocketry | Home</title>
     </head>
     <body>
@@ -56,12 +58,12 @@
             </header>
         </div>
         <div id="hero">
-            <h1><img src="./img/hero-text.png" alt="" /></h1>
-            <h2><img src="./img/hero-text2.png" alt="" /></h2>
-            <p>
-                We are a group of passionate highschoolers aimed at creating
+            <h1><img src="./img/hero-text.png" alt=""  class="animate__animated animate__backInDown"/></h1>
+            <h2><img src="./img/hero-text2.png" alt="" class="animate__animated animate__jello"/></h2>
+            <p class="animate__animated animate__flip">
+                We are a group of highschoolers passionate about creating
                 rockets and pursuing missions in aerospace engineering. We
-                emphasie core engineering skills and adaptive problem solving.
+                emphasize core engineering skills and adaptive problem solving.
             </p>
             <a href="#" class="btn btn-red  hvr-bounce-in">LEARN MORE</a>
         </div>
