need to make scroll down indicator bigger

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div id="mobile-nav">
             <i class="fa-solid fa-xmark fa-xl" id="cross"></i>
             <ul>
-                <li><a href="#" class="active-nav">HOME</a></li>
-                <li><a href="#">PROJECTS</a></li>
+                <li><a href="home.html" class="active-nav">HOME</a></li>
+                <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="#">OUTREACH</a></li>
                 <li><a href="#">SPONSORS</a></li>
                 <li><a href="#">TEAM</a></li>
@@ -62,7 +62,7 @@
         <div id="hero">
             <i
                 class="fa-solid fa-arrow-down fa-lg"
-                style="color: white; height: 30px; width: 30px"
+                style="color: white; height: 30px; width: 30px; "
                 id="bounce"
             ></i>
             <h1><img src="./img/hero-text.png" alt=""  class="animate__animated animate__backInDown"/></h1>
