--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="about">
                 <div class="left">
                     <h3 class="red-tag">ABOUT US</h3>
-                    <h2>We launch <span id = "competetivetext" style = "color: red; "><!--REPLACED--> </span> and experimental rockets.</h2>
+                    <h2>We launch <span id = "competetivetext" style = "color: red; ">competitive</span> and experimental <span style = "color: red;">rockets</span>.</h2>
                     <script src="/js/competitiveanimation.js"></script>
                     <p>
                         Louisville Rocketry is a student-led engineering team at
@@ -90,12 +90,12 @@
                     </p>
                 </div>
                 <div class="right">
-                    <img
+                    <img style = "pointer-events: none;" 
                         src="./img/left-border.png"
                         class="left-border"
                         alt=""
                     />
-                    <img
+                    <img style = "pointer-events: none;" 
                         src="./img/right-border.png"
                         class="right-border"
                         alt=""
@@ -103,12 +103,12 @@
                     <iframe
                         width="560"
                         height="412"
-                        src="https://www.youtube.com/embed/A2ZZnCD8i9M"
+                        src="https://www.youtube.com/embed/A2ZZnCD8i9M?autoplay=0&showinfo=0&controls=0"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
                         class="video"
+                        
                     ></iframe>
                 </div>
             </div>
