--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 
         <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script> <!--typeit.js-->
+
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--AOS JS-->
         <title>Louisville Rocketry | Home</title>
     </head>
     <body>
@@ -77,8 +79,8 @@
         <section id="about-us">
             <div id="about">
                 <div class="left">
-                    <h3 class="red-tag">ABOUT US</h3>
-                    <h2>We launch <span id = "competetivetext" style = "color: red; ">competitive</span> and experimental <span style = "color: red;">rockets</span>.</h2>
+                    <h3 class="red-tag" >ABOUT US</h3>
+                    <h2 class = "aos-animate" data-aos="fade-up">We launch <span id = "competetivetext" style = "color: red; ">competitive</span> and experimental <span style = "color: red;">rockets</span>.</h2>
                     <script src="/js/competitiveanimation.js"></script>
                     <p>
                         Louisville Rocketry is a student-led engineering team at
@@ -135,5 +137,10 @@
             <p>© 2022 Louisville Rocketry</p>
         </div>
         <script src="/js/script.js"></script>
+        <script>
+            AOS.init();
+          </script>
+
+
     </body>
 </html>
