fixed scroll down indicator

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div id="hero">
             <i
-                class="fa-solid fa-arrow-down fa-lg"
-                style="color: white; height: 30px; width: 30px; "
+                class="fa-solid fa-arrow-down fa-2xl"
+                style="color: white; height: 30px; width: 30px"
                 id="bounce"
             ></i>
             <h1><img src="./img/hero-text.png" alt=""  class="animate__animated animate__backInDown"/></h1>
