tryna fix aos js, not working

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
             referrerpolicy="no-referrer"
         />
 
-
-
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--Hover.css CDN-->
 
 
@@ -23,7 +21,8 @@
 
         <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script> <!--typeit.js-->
 
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--AOS JS-->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  <!--AOS JS-->
+        
         <title>Louisville Rocketry | Home</title>
     </head>
     <body>
