can't fix aos js, added links + details

--- a/index.html
+++ b/index.html
@@ -118,8 +118,13 @@
         <div id="footer">
             <div class="footer-nav">
                 <div class="social-icons">
+                    <a target="_blank" href="https://www.instagram.com/louisvillerocketry/">
                     <i class="fa-brands fa-instagram fa-xl"></i
-                    ><i class="fa-brands fa-facebook fa-xl"></i>
+                    >
+                </a>
+                <a target="_blank" href="https://www.facebook.com/louisvillerocketry/">
+                    <i class="fa-brands fa-facebook fa-xl"></i>
+                </a> 
                 </div>
                 <div class="navbar">
                     <ul>
@@ -136,10 +141,10 @@
             <p>© 2022 Louisville Rocketry</p>
         </div>
         <script src="/js/script.js"></script>
-        <script>
-            AOS.init();
-          </script>
-
-
+    
     </body>
+
+    <script>
+        AOS.init();
+      </script>
 </html>
