--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script> <!--typeit.js-->
 
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  <!--AOS JS-->
-        
+
+
+          <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
         <title>Louisville Rocketry | Home</title>
     </head>
     <body>
@@ -129,7 +131,7 @@
                 <div class="navbar">
                     <ul>
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">PROJECTS</a></li>
+                        <li><a href="projects.html">PROJECTS</a></li>
                         <li><a href="#">OUTREACH</a></li>
                         <li><a href="#">SPONSORS</a></li>
                         <li><a href="#">TEAM</a></li>
