--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,10 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <title>Home - LoiusVilleRocketry</title>
+        
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
+
+        <title>Louisville Rocketry | Projects</title>
     </head>
     <body>
         <!-- <img src="./img/hero-left.png" class="hero-left" alt="" /> -->
@@ -23,7 +26,7 @@
                 <ul class="navItems">
                     <li><a href="index.html">HOME</a></li>
                     <li>
-                        <a href="prjects.html" class="active-nav">PROJECTS</a>
+                        <a href="projects.html" class="active-nav">PROJECTS</a>
                     </li>
                     <li><a href="#">OUTREACH</a></li>
                     <li><a href="#">SPONSORS</a></li>
@@ -79,8 +82,8 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">PROJECTS</a></li>
+                        <li><a href="home.html">HOME</a></li>
+                        <li><a href="projects.html">PROJECTS</a></li>
                         <li><a href="#">OUTREACH</a></li>
                         <li><a href="#">SPONSORS</a></li>
                         <li><a href="#">TEAM</a></li>
