big big big updates, need 2 fix home, started on sponsors & outreach

--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
+
+       <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
 
         <title>Louisville Rocketry | Projects</title>
     </head>
@@ -28,7 +28,7 @@
                     <li>
                         <a href="projects.html" class="active-nav">PROJECTS</a>
                     </li>
-                    <li><a href="#">OUTREACH</a></li>
+                    <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="#">SPONSORS</a></li>
                     <li><a href="#">TEAM</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -44,7 +44,7 @@
                     <ul>
                         <li><a href="#" class="active-nav">HOME</a></li>
                         <li><a href="#">PROJECTS</a></li>
-                        <li><a href="#">OUTREACH</a></li>
+                        <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="#">SPONSORS</a></li>
                         <li><a href="#">TEAM</a></li>
                         <li><a href="#">CONTACT</a></li>
@@ -84,7 +84,7 @@
                     <ul>
                         <li><a href="home.html">HOME</a></li>
                         <li><a href="projects.html">PROJECTS</a></li>
-                        <li><a href="#">OUTREACH</a></li>
+                        <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="#">SPONSORS</a></li>
                         <li><a href="#">TEAM</a></li>
                         <li><a href="#">CONTACT</a></li>
