--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <li><a href="home.html" class="active-nav">HOME</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
-                <li><a href="#">OUTREACH</a></li>
+                <li><a href="outreach.html">OUTREACH</a></li>
                 <li><a href="#">SPONSORS</a></li>
                 <li><a href="#">TEAM</a></li>
                 <li><a href="#">CONTACT</a></li>
@@ -49,7 +49,7 @@
                 <ul class="navItems">
                     <li><a href="index.html" class="active-nav">HOME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="#">OUTREACH</a></li>
+                    <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="#">SPONSORS</a></li>
                     <li><a href="#">TEAM</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -132,7 +132,7 @@
                     <ul>
                         <li><a href="#">HOME</a></li>
                         <li><a href="projects.html">PROJECTS</a></li>
-                        <li><a href="#">OUTREACH</a></li>
+                        <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="#">SPONSORS</a></li>
                         <li><a href="#">TEAM</a></li>
                         <li><a href="#">CONTACT</a></li>
