home screen details

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <ul>
             <li><a href="home.html" class="active-nav">HOME</a></li>
             <li><a href="projects.html">PROJECTS</a></li>
-            <li><a href="#">OUTREACH</a></li>
-            <li><a href="#">SPONSORS</a></li>
-            <li><a href="#">TEAM</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#" class="border-red">JOIN</a></li>
+            <li><a href="outreach.html">OUTREACH</a></li>
+            <li><a href="sponsor.html">SPONSORS</a></li>
+            <li><a href="team.html">TEAM</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="join.html" class="border-red">JOIN</a></li>
         </ul>
     </div>
 
@@ -57,7 +57,7 @@
                 <li><a href="#">SPONSORS</a></li>
                 <li><a href="#">TEAM</a></li>
                 <li><a href="#">CONTACT</a></li>
-                <li><a href="#" class="border-red hvr-bounce-to-left">JOIN</a></li>
+                <li><a href="#" class="border-red hvr-grow-shadow ">JOIN</a></li>
             </ul>
             <i class="fa-solid fa-bars fa-lg" style="color: white; height: 30px; width: 30px" id="hamburger"></i>
         </header>
@@ -101,27 +101,7 @@
         </div>
     </section>
 
-    <div id="footer">
-        <div class="footer-nav">
-            <div class="social-icons">
-                <a target="_blank" href="https://www.instagram.com/louisvillerocketry/">
-                    <i class="fa-brands fa-instagram fa-xl"></i>
-                </a>
-                <a target="_blank" href="https://www.facebook.com/louisvillerocketry/">
-                    <i class="fa-brands fa-facebook fa-xl"></i>
-                </a>
-            </div>
-            <div class="navbar">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="outreach.html">OUTREACH</a></li>
-                    <li><a href="#">SPONSORS</a></li>
-                    <li><a href="#">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </div>
-        </section>
+    
 
         <div id="footer">
             <div class="footer-nav">
@@ -148,7 +128,7 @@
             </div>
             <p>© 2022 Louisville Rocketry</p>
         </div>
-        <p>© 2022 Louisville Rocketry</p>
+
     </div>
     <script src="/js/script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
