FINISHED HOME PAGE

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <li><a href="index.html" class="active-nav">HOME</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="outreach.html">OUTREACH</a></li>
-                <li><a href="#">SPONSORS</a></li>
-                <li><a href="#">TEAM</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#" class="border-red hvr-grow-shadow ">JOIN</a></li>
+                <li><a href="sponsor.html">SPONSORS</a></li>
+                <li><a href="team.html">TEAM</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="join.html" class="border-red hvr-grow-shadow ">JOIN</a></li>
             </ul>
             <i class="fa-solid fa-bars fa-lg" style="color: white; height: 30px; width: 30px" id="hamburger"></i>
         </header>
@@ -76,11 +76,11 @@
     <section id="about-us">
         <div id="about">
             <div class="left">
-                <h3 class="red-tag">ABOUT US</h3>
-                <h2 data-aos="fade-up">We launch <span id="competetivetext" style="color: red; ">competitive</span> and
+                <h3 class="red-tag" data-aos="fade-right" data-aos-duration="800">ABOUT US</h3>
+                <h2 data-aos="fade-up">We launch <span id="competetivetext" style="color: red; " data-aos="fade-up"></span> and
                     experimental <span style="color: red;">rockets</span>.</h2>
                 <script src="/js/competitiveanimation.js"></script>
-                <p data-aos="fade-up">
+                <p data-aos="fade-up" data-aos-duration="1200">
                     Louisville Rocketry is a student-led engineering team at
                     duPont Manual High School. Founded in 2017, we are
                     passionate about designing, testing, building, and
@@ -89,7 +89,7 @@
                     looking to take the next step forward.
                 </p>
             </div>
-            <div class="right" data-aos="fade-up">
+            <div class="right" data-aos="zoom-in-down" data-aos-duration="800">
                 <img style="pointer-events: none;" src="./img/left-border.png" class="left-border" alt="" />
                 <img style="pointer-events: none;" src="./img/right-border.png" class="right-border" alt="" />
                 <iframe width="560" height="412"
@@ -119,9 +119,9 @@
                         <li><a href="#">HOME</a></li>
                         <li><a href="projects.html">PROJECTS</a></li>
                         <li><a href="outreach.html">OUTREACH</a></li>
-                        <li><a href="#">SPONSORS</a></li>
-                        <li><a href="#">TEAM</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="sponsor.html">SPONSORS</a></li>
+                        <li><a href="team.html">TEAM</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <a href="#" class="btn btn-gray">JOIN</a>
