started on the team screen

--- a/outreach.html
+++ b/outreach.html
@@ -84,8 +84,8 @@
                     </div>
                     <div class="right">
                         <iframe
-                            width="610"
-                            height="412"
+                            width="580"
+                            height="390"
                             src="https://www.youtube.com/embed/A2ZZnCD8i9M"
                             title="YouTube video player"
                             frameborder="0"
@@ -125,9 +125,9 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="home.html">HOME</a></li>
-                        <li><a href="projects.html">PROJECTS</a></li>
-                        <li><a href="outreach.html">OUTREACH</a></li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">PROJECTS</a></li>
+                        <li><a href="#">OUTREACH</a></li>
                         <li><a href="#">SPONSORS</a></li>
                         <li><a href="#">TEAM</a></li>
                         <li><a href="#">CONTACT</a></li>
