--- a/outreach.html
+++ b/outreach.html
@@ -12,6 +12,10 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+
+        
         <title>Louisville Rocketry | Outreach</title>
     </head>
     <body>
