--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,10 @@
             referrerpolicy="no-referrer"
         />
 
+
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+
+        
        <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
 
         <title>Louisville Rocketry | Projects</title>
