--- a/sponsor.html
+++ b/sponsor.html
@@ -46,8 +46,8 @@
                         <a href="sponsor.html" class="active-nav">SPONSORS</a>
                     </li>
                     <li><a href="team.html">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#" class="border-red">JOIN</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="join.html" class="border-red">JOIN</a></li>
                 </ul>
                 <i
                     class="fa-solid fa-bars fa-lg"
@@ -111,10 +111,10 @@
                         <li><a href="outreach.html">OUTREACH</a></li>
                         <li><a href="sponsor.html">SPONSORS</a></li>
                         <li><a href="team.html">TEAM</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
-                <a href="#" class="btn btn-gray">JOIN</a>
+                <a href="join.html" class="btn btn-gray">JOIN</a>
             </div>
             <p>© 2022 Louisville Rocketry</p>
         </div>
