--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 
         <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
-        
+
        <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
 
         <title>Louisville Rocketry | Projects</title>
@@ -33,10 +33,10 @@
                         <a href="projects.html" class="active-nav">PROJECTS</a>
                     </li>
                     <li><a href="outreach.html">OUTREACH</a></li>
-                    <li><a href="#">SPONSORS</a></li>
-                    <li><a href="#">TEAM</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#" class="border-red">JOIN</a></li>
+                    <li><a href="sponsor.html">SPONSORS</a></li>
+                    <li><a href="team.html">TEAM</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="join.html" class="border-red">JOIN</a></li>
                 </ul>
                 <i
                     class="fa-solid fa-bars fa-lg"
