--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </header>
     </div>
     <div id="hero">
-        <i class="fa-solid fa-arrow-down fa-2xl" style="color: white; height: 30px; width: 30px" id="bounce"></i>
+        <img src="./img/downarrow.svg" style="height: 30px; width: 30px" id="bounce">
         <h1><img src="./img/hero-text.png" alt="" class="animate__animated animate__backInDown" /></h1>
         <h2><img src="./img/hero-text2.png" alt="" class="animate__animated animate__backInDown" /></h2>
         <p class="animate__animated animate__fadeInUp">
@@ -77,7 +77,8 @@
         <div id="about">
             <div class="left">
                 <h3 class="red-tag" data-aos="fade-right" data-aos-duration="800">ABOUT US</h3>
-                <h2 data-aos="fade-up">We launch <span id="competetivetext" style="color: red; " data-aos="fade-up"></span> and
+                <h2 data-aos="fade-up">We launch <span id="competetivetext" style="color: red; "
+                        data-aos="fade-up"></span> and
                     experimental <span style="color: red;">rockets</span>.</h2>
                 <script src="/js/competitiveanimation.js"></script>
                 <p data-aos="fade-up" data-aos-duration="1200">
@@ -101,35 +102,34 @@
         </div>
     </section>
 
-    
 
-        <div id="footer">
-            <div class="footer-nav">
-                <div class="social-icons">
-                    <a target="_blank" href="https://www.instagram.com/louisvillerocketry/">
-                    <i class="fa-brands fa-instagram fa-xl"></i
-                    >
+
+    <div id="footer">
+        <div class="footer-nav">
+            <div class="social-icons">
+                <a target="_blank" href="https://www.instagram.com/louisvillerocketry/">
+                    <i class="fa-brands fa-instagram fa-xl"></i>
                 </a>
                 <a target="_blank" href="https://www.facebook.com/louisvillerocketry/">
                     <i class="fa-brands fa-facebook fa-xl"></i>
-                </a> 
-                </div>
-                <div class="navbar">
-                    <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="projects.html">PROJECTS</a></li>
-                        <li><a href="outreach.html">OUTREACH</a></li>
-                        <li><a href="sponsor.html">SPONSORS</a></li>
-                        <li><a href="team.html">TEAM</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
-                    </ul>
-                </div>
-                <a href="#" class="btn btn-gray">JOIN</a>
+                </a>
             </div>
-            <p>© 2022 Louisville Rocketry</p>
+            <div class="navbar">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="outreach.html">OUTREACH</a></li>
+                    <li><a href="sponsor.html">SPONSORS</a></li>
+                    <li><a href="team.html">TEAM</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+            <a href="#" class="btn btn-gray">JOIN</a>
         </div>
+        <p>© 2022 Louisville Rocketry</p>
+    </div>
 
-    </div>         
+    </div>
     <script src="/js/script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
