red border - see summary
the red borders are in weird positions, best to not include them unless there's some way for them to be positioned exactly at the corners across multiple viewports.

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 </p>
             </div>
             <div class="right" data-aos="zoom-in-down" data-aos-duration="800">
-                <img style="pointer-events: none;" src="./img/left-border.png" class="left-border" alt="" />
-                <img style="pointer-events: none;" src="./img/right-border.png" class="right-border" alt="" />
+                <!-- <img style="pointer-events: none;" src="./img/left-border.png" class="left-border" alt="" />
+                <img style="pointer-events: none;" src="./img/right-border.png" class="right-border" alt="" /> -->
                 <iframe width="560" height="412"
                     src="https://www.youtube.com/embed/A2ZZnCD8i9M?autoplay=0&showinfo=0&controls=0"
                     title="YouTube video player" frameborder="0"
