landing widths fix

--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
         <div id="about">
             <div class="left">
                 <h3 class="red-tag" data-aos="fade-right" data-aos-duration="800">ABOUT US</h3>
-                <h2 data-aos="fade-up">We launch <span id="competetivetext" style="color: red; "
-                        data-aos="fade-up"></span> and
-                    experimental <span style="color: red;">rockets</span>.</h2>
+                <h2 data-aos="fade-up">We launch Competitive and
+                    experimental <span style="color: red;">Rockets</span>.</h2>
                 <script src="/js/competitiveanimation.js"></script>
                 <p data-aos="fade-up" data-aos-duration="1200">
                     Louisville Rocketry is a student-led engineering team at
