hero texts to one svg and about us width fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="header">
         <header>
             <a href="index.html">
-                <img src="./img/logo.png" alt="LOGO" class="hvr-pulse-grow" />
+                <img src="./img/logo.png" alt="LOGO" class="hvr-grow" />
             </a>
             <ul class="navItems">
                 <li><a href="index.html" class="active-nav">HOME</a></li>
@@ -64,14 +64,13 @@
     </div>
     <div id="hero">
         <img src="./img/downarrow.svg" style="height: 30px; width: 30px" id="bounce">
-        <h1><img src="./img/hero-text.png" alt="" class="animate__animated animate__backInDown" /></h1>
-        <h2><img src="./img/hero-text2.png" alt="" class="animate__animated animate__backInDown" /></h2>
+        <h1><img src="./img/herotitletext.svg" alt="" class="animate__animated animate__backInDown" /></h1>
         <p class="animate__animated animate__fadeInUp">
             We are a group of highschoolers passionate about creating
             rockets and pursuing missions in aerospace engineering. We
-            emphasize core engineering skills and adaptive problem solving.
+            emphasize core engineering skills.
         </p>
-        <a href="#" class="btn btn-red  hvr-bounce-in">LEARN MORE</a>
+        <a href="#about-us" class="btn btn-red hvr-grow">LEARN MORE</a>
     </div>
     <section id="about-us">
         <div id="about">
