Contact page done

--- a/outreach.html
+++ b/outreach.html
@@ -43,7 +43,7 @@
                         <a href="outreach.html" class="active-nav">OUTREACH</a>
                     </li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
-                    <li><a href="tean.html">TEAM</a></li>
+                    <li><a href="team.html">TEAM</a></li>
                     <li><a href="#">CONTACT</a></li>
                     <li><a href="#" class="border-red">JOIN</a></li>
                 </ul>
