--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <title>Louisville Rocketry | Home</title>
 </head>
 
-<body>
+<body style="background-color:#121212;">
     <div id="mobile-nav">
         <i class="fa-solid fa-xmark fa-xl" id="cross"></i>
         <ul>
@@ -62,43 +62,53 @@
             <i class="fa-solid fa-bars fa-lg" style="color: white; height: 30px; width: 30px" id="hamburger"></i>
         </header>
     </div>
-    <div id="hero" class="hero-bg">
-        <img src="./img/downarrow.svg" style="height: 30px; width: 30px" id="bounce">
-        <h1><img src="./img/herotitletext.svg" alt="" class="animate__animated animate__backInDown" /></h1>
-        <p class="animate__animated animate__fadeInUp">
-            We are a group of highschoolers passionate about creating
-            rockets and pursuing missions in aerospace engineering. We
-            emphasize core engineering skills.
-        </p>
-        <a href="#about-us" class="btn btn-red hvr-grow">LEARN MORE</a>
-    </div>
-    <section id="about-us">
-        <div id="about">
-            <div class="left">
-                <h3 class="red-tag" data-aos="fade-right" data-aos-duration="800">ABOUT US</h3>
-                <h2 data-aos="fade-up">We launch Competitive and
-                    experimental <span style="color: red;">Rockets</span>.</h2>
-                <script src="/js/competitiveanimation.js"></script>
-                <p data-aos="fade-up" data-aos-duration="1200">
-                    Louisville Rocketry is a student-led engineering team at
-                    duPont Manual High School. Founded in 2017, we are
-                    passionate about designing, testing, building, and
-                    launching rockets. With multiple successful seasons and
-                    experienced team members, our rocketry team is always
-                    looking to take the next step forward.
-                </p>
-            </div>
-            <div class="right" data-aos="zoom-in-down" data-aos-duration="800">
-                <!-- <img style="pointer-events: none;" src="./img/left-border.png" class="left-border" alt="" />
-                <img style="pointer-events: none;" src="./img/right-border.png" class="right-border" alt="" /> -->
-                <iframe width="560" height="412"
-                    src="https://www.youtube.com/embed/A2ZZnCD8i9M?autoplay=0&showinfo=0&controls=0"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    class="video"></iframe>
-            </div>
+
+    <div id="hero" class="half-hero contact">
+        <h3 class="red-tag">CONTACT</h3>
+        <h1>Get in Touch</h1>
+        <p>Reach out to us: <a class="email">louisvillerocketry@gmail.com</a></p>
+        <div class="social-icons">
+            <a target="_blank" href="https://www.instagram.com/louisvillerocketry/">
+                <i class="fa-brands fa-instagram fa-xl"></i>
+            </a>
+            <a target="_blank" href="https://www.facebook.com/louisvillerocketry/">
+                <i class="fa-brands fa-facebook fa-xl"></i>
+            </a>
         </div>
-    </section>
+    </div>
+
+
+
+    <div class="pagebox">
+        <form action="" method="POST">
+            <div class="formbox">
+                <div class="inputs">
+                    <div class="input">
+                        <input placeholder="Email"id="name" type="text" name="name" required="required">
+
+                    </div>
+                    <div class="input">
+                        <input placeholder="Name"id="email" name="_replyto" type="email" required="required">
+
+                    </div>
+                    <div class="input">
+                        <input placeholder="Phone Number"id="subj" type="text" name="_subject" required="required">
+
+                    </div>
+                    <div class="input">
+                        <input placeholder="Nature of Contact"id="subj" type="text" name="_subject" required="required">
+
+                    </div>
+                </div>
+                <div class="textarea">
+                    <textarea placeholder="Message"id="message-area" name="message" required="required"></textarea>
+
+                </div>
+            </div>
+            <button class="submit" type="submit" >Submit</button>
+    
+        </form>
+    </div>
 
 
 
